--- a/style.css
+++ b/style.css
@@ -1,63 +1,93 @@
-@import url("//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css");
-.login-block{
-background: #DE6262;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to bottom, #FFB88C, #DE6262);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to bottom, #FFB88C, #DE6262); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-background-image:url("Images/Background.jpg");
-float:left;
-width:100%;
-padding : 50px 0;
-}
-.banner-sec{background:url("Images/Background.jpg")  no-repeat left bottom; background-size:cover; min-height:500px; border-radius: 0 10px 10px 0; padding:0;}
-.container{background:#298af1; border-radius: 10px; box-shadow:15px 20px 0px rgba(0,0,0,0.1);}
-.carousel-inner{border-radius:0 10px 10px 0;}
-.carousel-caption{text-align:left; left:5%;}
-.login-sec{padding: 50px 30px; position:relative; opacity:0.6;}
-.login-sec h2:after{content:" "; width:100px; height:5px; background:rgb(22, 3, 53); display:block; margin-top:20px; border-radius:3px; margin-left:auto;margin-right:auto}
-.btnRegister{
-    float: left;
+.register{
+    background-image: linear-gradient(rgba(0, 0, 255, 0.5), rgba(0, 2, 14, 0.5)),
+    url("./Images/Background.jpg");
+    background-repeat:no-repeat;
+    background-attachment: fixed;
+    background-size: 100% 100%;
+    padding: 3%;
+    height: 100%;
+  }
+  .register-left{
+    text-align: center;
+    color: #fff;
+    margin-top: 4%;
+  }
+  .register-right{
+    background: #3194f8;
+    opacity: 0.6;
+    border-top-left-radius: 10% 50%;
+    border-bottom-left-radius: 10% 50%;
+  }
+  .register-left img{
+    margin-top: 15%;
+    margin-bottom: 5%;
+    width: 45%;
+    -webkit-animation: mover 2s infinite  alternate;
+    animation: mover 1s infinite  alternate;
+  }
+  @-webkit-keyframes mover {
+    0% { transform: translateY(0); }
+    100% { transform: translateY(-20px); }
+  }
+  @keyframes mover {
+    0% { transform: translateY(0); }
+    100% { transform: translateY(-20px); }
+  }
+  .register-left p{
+    font-weight: bolder;
+    font-size: 150%;
+    padding: 12%;
+    margin-top: -9%;
+  }
+  .register .register-form{
+    padding: 10%;
+    margin-top: 10%;
+    
+  }
+  .btnRegister{
+    float: right;
     margin-top: 2%;
-    margin-bottom: 2%;
     border: none;
     border-radius: 1.5rem;
     padding: 2%;
-    background:rgb(22, 3, 53);
+    background: #033d7a;
     color: #fff;
     font-weight: 800;
     width: 50%;
     cursor: pointer;
-}
-.register-heading{
-    text-align: center;
-    margin-top: 8%;
-    color: rgb(8, 8, 8);
-    font-weight: bolder;
-    font-size: 210%;
-}
-.login-sec .nav-tabs{
+  }
+  .register .nav-tabs{
     margin-top: 3%;
     border: none;
     background: #0062cc;
     border-radius: 1.5rem;
     width: 28%;
     float: right;
-}
-.login-sec .nav-tabs .nav-link{
+  }
+  .register .nav-tabs .nav-link{
     padding: 2%;
     height: 34px;
     font-weight: 1000;
     color: #fff;
     border-top-right-radius: 1.5rem;
     border-bottom-right-radius: 1.5rem;
-}
-.login-sec .nav-tabs .nav-link:hover{
+  }
+  .register .nav-tabs .nav-link:hover{
     border: none;
-}
-.login-sec .nav-tabs .nav-link.active{
+  }
+  .register .nav-tabs .nav-link.active{
     width: 100px;
     color: #033d7a;
     border: 2px solid #033d7a;
     border-top-left-radius: 1.5rem;
     border-bottom-left-radius: 1.5rem;
-}
-
+  }
+  .register-heading{
+    text-align: center;
+    margin-top: 8%;
+    color: rgb(8, 8, 8);
+    font-weight: bolder;
+    font-size: 210%;
+  }
+  
+  
